# HangingByAThread

./: .gitignore  Cargo.toml  README.md  android-run.py  build.rs  package.py
.cargo/: config.toml
assets/android/shaders/basic/: basic.frag  basic.vert
assets/shared/: SimpleBox.model
assets/shared/models/: SimpleBox.model
platform/Android/: build.gradle  gradle.properties  settings.gradle
platform/Android/app/: build.gradle
platform/Android/app/src/androidTest/java/com/binaryquackers/hbat/: ExampleInstrumentedTest.java
platform/Android/app/src/main/: AndroidManifest.xml
platform/Android/app/src/main/cpp/: CMakeLists.txt  Engine.cpp  Engine.h  bridge.cpp  main.cpp
platform/Android/app/src/main/java/com/binaryquackers/hbat/: MainActivity.java  MainGLSurfaceView.java
platform/Android/app/src/main/java/com/example/native_activity/: HBATActivity.java
platform/Android/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
platform/Android/app/src/main/res/values-night/: themes.xml
platform/Android/app/src/test/java/com/binaryquackers/hbat/: ExampleUnitTest.java
platform/Android/gradle/wrapper/: gradle-wrapper.properties
src/: devcon.rs  engine.rs  fs.rs  lib.rs  log.rs  mainloop.rs  math.rs  utils.rs
src/bridge/: android.rs
src/bridge/android/: activity.rs  asset.rs  bindings.rs  devcon.rs  globals.rs  graphics.rs  mod.rs
src/bridge/android/graphics/: .mod.rs.swp  mod.rs
src/graphics/: gl.rs  mod.rs  model.rs
