[package]
name = "hbat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
build-target = "0.4.0"

[lib]
crate-type=["staticlib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.1"

[dependencies]
log = "0.4.17"
memmap2 = "0.5.7"
