[package]
name = "hbat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
build-target = "0.4.0"

[lib]
crate-type=["cdylib"]

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.11"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.20.0"
android_logger = "0.11.1"
khronos-egl = { version = "4.1.0", features = ["dynamic"] }
gl = "0.6.0"

[dependencies]
log = "0.4.17"
memmap2 = "0.5.7"
once_cell = "1.16.0"
raw-window-handle = "0.5.0"
libloading = "0.7"
